--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
+    "lighthouse": "node scripts/lighthouse-audit.js",
+    "lighthouse:prod": "node scripts/lighthouse-audit.js https://your-production-url.com",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
