--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "lighthouse": "node scripts/lighthouse-audit.js",
+
     "lighthouse:prod": "node scripts/lighthouse-audit.js https://your-production-url.com",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
@@ -33,6 +34,7 @@
     "zustand": "^4.5.7"
   },
   "devDependencies": {
+    "@lhci/cli": "^0.15.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
